--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -10,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest  # Environnement de test
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2  # Récupère le code de ton repository
+        uses: actions/checkout@v3  # Mise à jour vers v3
 
       # Étape 1 : Construction du projet frontend
       - name: Set up Node.js for frontend
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3  # Mise à jour vers v3
         with:
           node-version: '16'  # Spécifie la version de Node.js
       - name: Install frontend dependencies
@@ -57,7 +57,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2  # Récupère à nouveau le code source
+        uses: actions/checkout@v3  # Mise à jour vers v3
 
       # Connexion à Docker Hub
       - name: Log in to Docker Hub
