--- a/Desktop/tool_project/pmt-frontend/angular.json
+++ b/Desktop/tool_project/pmt-frontend/angular.json
@@ -101,7 +101,8 @@
               "src/styles.scss"
             ],
             "scripts": [],
-            "codeCoverage": true 
+            "codeCoverage": true,
+            "browsers": ["ChromeHeadless"]
           }
         }
       }
