--- a/Desktop/tool_project/pmt-frontend/angular.json
+++ b/Desktop/tool_project/pmt-frontend/angular.json
@@ -102,7 +102,8 @@
             ],
             "scripts": [],
             "codeCoverage": true,
-            "browsers": ["ChromeHeadless"]
+            "browsers": ["ChromeHeadless"],
+            "karmaConfig": "./karma.conf.js"
           }
         }
       }
