--- a/Desktop/tool_project/pmt-frontend/angular.json
+++ b/Desktop/tool_project/pmt-frontend/angular.json
@@ -102,7 +102,7 @@
             ],
             "scripts": [],
             "codeCoverage": true,
-            "browsers": ["ChromeHeadless"],
+            "browsers": "ChromeHeadless",  // Modifié ici pour être une chaîne de caractères
             "karmaConfig": "./karma.conf.js"
           }
         }
