--- a/Desktop/tool_project/Docker-compose.yml
+++ b/Desktop/tool_project/Docker-compose.yml
@@ -9,10 +9,10 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - DB_HOST=db
-      - DB_NAME=pmt_db
-      - DB_USERNAME=root
-      - DB_PASSWORD=steve
+      - MYSQL_HOST=db
+      - MYSQL_DB=pmt_db
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=steve
     depends_on:
       - db
     networks:
@@ -23,7 +23,7 @@ services:
     container_name: mysql-db
     environment:
       MYSQL_ROOT_PASSWORD: steve
-      MYSQL_DATABASE: pmt_db
+      MYSQL_DATABASE=pmt_db
     ports:
       - "3306:3306"
     volumes:
