--- a/Desktop/tool_project/pmt-backend2/src/main/resources/application.properties
+++ b/Desktop/tool_project/pmt-backend2/src/main/resources/application.properties
@@ -1,19 +1,18 @@
 # Configurations de l'application
 spring.application.name=pmt-backend
 
-# Utilisation des variables d'environnement pour la base de données
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:db}:3306/${MYSQL_DB:pmt_db}
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASSWORD:steve}
+# Configuration de la base de données avec des valeurs par défaut
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/${MYSQL_DB:test_db}
+spring.datasource.username=${MYSQL_USER:test_user}
+spring.datasource.password=${MYSQL_PASSWORD:test_password}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-
-# Configuration de l'e-mail
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${MAIL_USERNAME}  # Utilisation d'une variable d'environnement pour l'email
-spring.mail.password=${MAIL_PASSWORD}  # Utilisation d'une variable d'environnement pour le mot de passe
+# Configuration de l'e-mail avec des valeurs par défaut
+spring.mail.host=${MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USERNAME:test@gmail.com}  # Email par défaut pour les tests
+spring.mail.password=${MAIL_PASSWORD:test_password}   # Mot de passe par défaut pour les tests
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
