--- a/Desktop/tool_project/pmt-backend2/src/main/resources/application.properties
+++ b/Desktop/tool_project/pmt-backend2/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 # Configurations de l'application
 spring.application.name=pmt-backend
 
-# Configuration de la base de données avec des valeurs par défaut
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:db}:3306/${MYSQL_DB:pmt_db}
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASSWORD:steve}
+# Utilisation des valeurs fixes pour la base de données
+spring.datasource.url=jdbc:mysql://localhost:3306/pmt_db
+spring.datasource.username=root
+spring.datasource.password=steve
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Configuration de l'e-mail avec des valeurs par défaut
-spring.mail.host=${MAIL_HOST:smtp.gmail.com}
-spring.mail.port=${MAIL_PORT:587}
-spring.mail.username=${MAIL_USERNAME:stevetadesse0@gmail.com}
-spring.mail.password=${MAIL_PASSWORD:xptw usin ohjm vhzu}
+# Configuration de l'e-mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=stevetadesse0@gmail.com
+spring.mail.password=xptw usin ohjm vhzu
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
