--- a/Desktop/tool_project/Docker-compose.yml
+++ b/Desktop/tool_project/Docker-compose.yml
@@ -9,10 +9,11 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - MYSQL_HOST=localhost  # Utilisation de localhost pour la base de données dans Docker
-      - MYSQL_DB=pmt_db
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=steve
+      
+      - DB_HOST=db
+      - DB_NAME=pmt_db
+      - DB_USERNAME=root
+      - DB_PASSWORD=steve
       - MAIL_HOST=smtp.gmail.com
       - MAIL_PORT=587
       - MAIL_USERNAME=stevetadesse0@gmail.com
