--- a/Desktop/tool_project/Docker-compose.yml
+++ b/Desktop/tool_project/Docker-compose.yml
@@ -14,7 +14,8 @@ services:
       - DB_USERNAME=root
       - DB_PASSWORD=steve
     depends_on:
-      - db
+      db:
+        condition: service_healthy  # Attendre que le service MySQL soit prêt avant de démarrer le backend
     networks:
       - app-network
 
@@ -30,17 +31,24 @@ services:
       - db_data:/var/lib/mysql
     networks:
       - app-network
-
+     healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-psteve"]
+      interval: 30s
+      retries: 5
+      timeout: 10s
+      start_period: 10s
+      
   frontend:
-    container_name: pmt-frontend  # Le nom du conteneur frontend à garder
+    container_name: pmt-frontend
     build:
-      context: ./pmt-frontend  # Le répertoire contenant le Dockerfile pour le frontend
+      context: ./pmt-frontend
     ports:
-      - "4200:81"  # Mappe le port 81 du conteneur au port 4200 de l'hôte
+      - "4200:81"
     networks:
       - app-network
     depends_on:
-      - backend  # Attends que le backend soit prêt avant de démarrer
+      backend:
+        condition: service_healthy  # Attendre que le backend soit prêt avant de démarrer le frontend
 
 networks:
   app-network:
