--- a/Desktop/tool_project/pmt-backend2/src/main/resources/application.properties
+++ b/Desktop/tool_project/pmt-backend2/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=pmt-backend
 
 # Utilisation des valeurs fixes pour la base de données
-spring.datasource.url=jdbc:mysql://mysql:3306/pmt_db
+spring.datasource.url=jdbc:mysql://localhost:3306/pmt_db
 spring.datasource.username=root
 spring.datasource.password=steve
 spring.jpa.hibernate.ddl-auto=update
