--- a/Desktop/tool_project/pmt-backend2/src/main/resources/application.properties
+++ b/Desktop/tool_project/pmt-backend2/src/main/resources/application.properties
@@ -1,17 +1,35 @@
 # Configurations de l'application
 spring.application.name=pmt-backend
 
-# Utilisation des valeurs fixes pour la base de données
+# Section par défaut (Local)
 spring.datasource.url=jdbc:mysql://localhost:3306/pmt_db
 spring.datasource.username=root
 spring.datasource.password=steve
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# Configuration de l'e-mail
+# Configuration de l'e-mail (valeurs par défaut, utilisées pour le développement local)
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=stevetadesse0@gmail.com
 spring.mail.password=xptw usin ohjm vhzu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# --------- Configuration CI ---------
+spring.config.activate.on-profile=ci
+
+# Utilisation des variables d'environnement pour CI
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/${MYSQL_DB:pmt_db}
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:steve}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Configuration de l'e-mail pour CI (en cas de besoins spécifiques pour l'envoi d'emails en CI)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME:stevetadesse0@gmail.com}
+spring.mail.password=${MAIL_PASSWORD:xptw usin ohjm vhzu}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
