--- a/Desktop/tool_project/pmt-backend2/pom.xml
+++ b/Desktop/tool_project/pmt-backend2/pom.xml
@@ -89,21 +89,15 @@
             <artifactId>h2</artifactId>
             <scope>test</scope>
         </dependency>
-        <!-- Sécurité Spring Boot (optionnel) -->
-        <!--
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-        -->
     </dependencies>
 
     <build>
         <plugins>
-            <!-- Plugin de compilation -->
+            <!-- Plugin de compilation avec prise en charge explicite de Java 21 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version> <!-- Version supportant Java 21 -->
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
