--- a/Desktop/tool_project/pmt-backend2/pom.xml
+++ b/Desktop/tool_project/pmt-backend2/pom.xml
@@ -2,12 +2,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.3.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>com.example</groupId>
     <artifactId>pmt-backend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -15,13 +17,11 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <java.version>22</java.version>
-        <maven.compiler.source>22</maven.compiler.source>
-        <maven.compiler.target>22</maven.compiler.target>
+        <java.version>22</java.version> <!-- Définit la version de Java à utiliser -->
     </properties>
 
     <dependencies>
-        <!-- Dépendances conservées -->
+        <!-- Dépendances Spring Boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -95,14 +95,15 @@
 
     <build>
         <plugins>
-            <!-- Plugin de compilation avec prise en charge explicite de Java 21 -->
+            <!-- Plugin de compilation pour Java 22 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version> <!-- Version supportant Java 21 -->
+                <version>3.10.1</version> <!-- Plugin supportant Java 22 -->
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <release>${java.version}</release> <!-- Ajoute la compatibilité avec Java 22 -->
                 </configuration>
             </plugin>
 
@@ -112,7 +113,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
 
-            <!-- Plugin Maven Surefire -->
+            <!-- Plugin Maven Surefire pour les tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
