--- a/Desktop/tool_project/Docker-compose.yml
+++ b/Desktop/tool_project/Docker-compose.yml
@@ -6,6 +6,7 @@ services:
       context: ./pmt-backend2  # Chemin mis à jour vers pmt-backend2
       dockerfile: Dockerfile
     container_name: pmt-backend2
+    image: openjdk:22-jdk-slim  # Utilisez l'image Docker avec Java 22
     ports:
       - "8080:8080"
     environment:
