--- a/Desktop/tool_project/pmt-backend2/pom.xml
+++ b/Desktop/tool_project/pmt-backend2/pom.xml
@@ -17,7 +17,8 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <java.version>21</java.version> <!-- Définit la version de Java à utiliser -->
+        <!-- Mise à jour pour utiliser Java 22 -->
+        <java.version>22</java.version> <!-- Définit la version de Java à utiliser -->
     </properties>
 
     <dependencies>
