--- a/Desktop/tool_project/pmt-backend2/pom.xml
+++ b/Desktop/tool_project/pmt-backend2/pom.xml
@@ -2,14 +2,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.3.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
     <groupId>com.example</groupId>
     <artifactId>pmt-backend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -17,12 +15,11 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <!-- Mise à jour pour utiliser Java 22 -->
-        <java.version>22</java.version> <!-- Définit la version de Java à utiliser -->
+        <java.version>21</java.version>
     </properties>
 
     <dependencies>
-        <!-- Dépendances Spring Boot -->
+        <!-- Dépendances conservées -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -92,19 +89,24 @@
             <artifactId>h2</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Sécurité Spring Boot (optionnel) -->
+        <!--
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        -->
     </dependencies>
 
     <build>
         <plugins>
-            <!-- Plugin de compilation pour Java 22 -->
+            <!-- Plugin de compilation -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version> <!-- Plugin supportant Java 22 -->
                 <configuration>
-                    <source>22</source>
-                    <target>22</target>
-                    <release>22</release> <!-- Ajoute la compatibilité avec Java 22 -->
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
 
@@ -114,7 +116,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
 
-            <!-- Plugin Maven Surefire pour les tests -->
+            <!-- Plugin Maven Surefire -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
