--- a/Desktop/tool_project/pmt-backend2/Dockerfile
+++ b/Desktop/tool_project/pmt-backend2/Dockerfile
@@ -1,14 +1,21 @@
-# Utiliser l'image officielle de OpenJDK
+# Utilisation de l'image de base openjdk 17
 FROM openjdk:17-jdk-slim
 
-# Définir le répertoire de travail dans le conteneur
+# Définir le répertoire de travail
 WORKDIR /app
 
-# Copier le fichier JAR de l'application dans le conteneur
-COPY target/pmt-backend-0.0.1-SNAPSHOT.jar app.jar
+# Copier le projet backend dans l'image Docker
+COPY ./Desktop/tool_project/pmt-backend2 /app
 
-# Exposer le port 8080 sur lequel l'application écoute
+# Exposer le port de l'application backend
 EXPOSE 8080
+
+# Exécuter Maven pour installer les dépendances
+RUN ./mvnw clean install
+
+# Démarrer l'application backend
+CMD ["./mvnw", "spring-boot:run"]
+
 
 # Commande pour lancer l'application Spring Boot
 ENTRYPOINT ["java", "-jar", "app.jar"]
