--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,4 +1,4 @@
-CI/CD Pipeline
+name: CI/CD Pipeline
 
 on:
   push:
@@ -118,36 +118,4 @@ jobs:
         run: |
           cd Desktop/tool_project/pmt-backend2
           docker build -t ${{ secrets.DOCKER_USERNAME }}/backend-app:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/backend-app:latest" "name: Build and Test
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    # Checkout du code source
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    # Configurer Java 17
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'adoptopenjdk'  # ou 'zulu', si vous préférez
-
-    # Vérification de la version de Java (optionnel, mais utile pour le debug)
-    - name: Verify Java version
-      run: java -version
-
-    # Build avec Maven
-    - name: Build with Maven
-      run: mvn clean install
+          docker push ${{ secrets.DOCKER_USERNAME }}/backend-app:latest
