--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -16,7 +16,11 @@ jobs:
           MYSQL_DATABASE: pmt_db
         ports:
           - 3306:3306
-        options: --health-cmd="mysqladmin ping --silent" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: > 
+          --health-cmd="mysqladmin ping --silent" 
+          --health-interval=10s 
+          --health-timeout=5s 
+          --health-retries=3
 
     steps:
       - name: Checkout code
@@ -53,8 +57,7 @@ jobs:
       - name: Install backend dependencies
         run: |
           cd Desktop/tool_project/pmt-backend2
-          mvn clean
-          ./mvnw install  # Installation des dépendances backend
+          ./mvnw clean install  # Nettoyage et installation des dépendances backend
       - name: Build backend project
         run: |
           cd Desktop/tool_project/pmt-backend2
