--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -16,11 +16,7 @@ jobs:
           MYSQL_DATABASE: pmt_db
         ports:
           - 3306:3306
-        options: > 
-          --health-cmd="mysqladmin ping --silent" 
-          --health-interval=10s 
-          --health-timeout=5s 
-          --health-retries=3
+        options: --health-cmd="mysqladmin ping --silent" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - name: Checkout code
@@ -57,7 +53,8 @@ jobs:
       - name: Install backend dependencies
         run: |
           cd Desktop/tool_project/pmt-backend2
-          ./mvnw clean install  # Nettoyage et installation des dépendances backend
+          mvn clean
+          ./mvnw install  # Installation des dépendances backend
       - name: Build backend project
         run: |
           cd Desktop/tool_project/pmt-backend2
