--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -21,6 +21,8 @@ jobs:
           --health-interval=10s 
           --health-timeout=5s 
           --health-retries=3
+        networks:
+          - github_network
 
     steps:
       - name: Checkout code
@@ -134,3 +136,7 @@ jobs:
           cd Desktop/tool_project/pmt-backend2
           docker build -t ${{ secrets.DOCKER_USERNAME }}/backend-app:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/backend-app:latest
+
+networks:
+  github_network:
+    driver: bridge
