--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -15,9 +15,9 @@ jobs:
           MYSQL_ROOT_PASSWORD: steve
           MYSQL_DATABASE: pmt_db
         ports:
-          - "3306:3306"
-        options: >
-          --health-cmd='mysqladmin ping --silent' 
+          - 3306:3306
+        options: > 
+          --health-cmd="mysqladmin ping --silent" 
           --health-interval=10s 
           --health-timeout=5s 
           --health-retries=3
