--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -86,25 +86,29 @@ jobs:
           ./mvnw test
 
   dockerize-and-publish:
-    needs: build-and-test  # Ce job dépend des tests du job précédent
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Utilisation de l'environnement Ubuntu
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Utilisation de la dernière version de checkout
+        uses: actions/checkout@v3
 
-      # Connexion à Docker Hub
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}  # Nom d'utilisateur Docker Hub
-          password: ${{ secrets.DOCKER_PASSWORD }}  # Mot de passe Docker Hub
+      # Installer Java 17
+      - name: Install Java 17
+        run: |
+          sudo apt update
+          sudo apt install openjdk-17-jdk -y
+          java -version  # Vérifier l'installation de Java
+
+      # Vérification de la version de Maven
+      - name: Check Maven version
+        run: mvn -v
 
       # Étape : Construction du projet backend avec Maven
       - name: Build backend project
         run: |
           cd Desktop/tool_project/pmt-backend2
-          ./mvnw clean package
-          
+          ./mvnw clean package -e -X  # Débogage de la commande Maven
+
       # Étape 1 : Dockerisation et push de l'image Docker pour le frontend
       - name: Build and push frontend Docker image
         run: |
